k8s-apps/cmdb/cmdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmdb-app
  namespace: cmdb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cmdb-app
  template:
    metadata:
      labels:
        app: cmdb-app
    spec:
      serviceAccountName: cmdb-sa
      containers:
        - name: cmdb-app
          image: zaid/homelab-cmdb:v8
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
