k8s-apps/cmdb/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cmdb-postgres
  namespace: cmdb
spec:
  selector:
    app: cmdb-postgres
  ports:
    - port: 5432
      targetPort: 5432
